kubernetes/postgres.yaml
# Secrets
# apiVersion: v1
# data:
#   password: cGFzc3dvcmQxMjMK  # echo "password123" | base64
#   username: ZGJhZG1pbgo=  # echo "dbadmin" | base64 
# kind: Secret
# metadata:
#   name: postgres
#   namespace: comtily

---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: postgres
  name: postgres
  namespace: comtily
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres
        imagePullPolicy: "IfNotPresent"
        # ports:
        #   - containerPort: 5432
        # args: ["--dbpath","/data/db"]
        volumeMounts:
        - name: "postgres-data-dir"
          mountPath: "/var/lib/postgresql/data"
      volumes:
      - name: "postgres-data-dir"
        persistentVolumeClaim:
          claimName: "postgres"

---
# Service
apiVersion: v1
kind: Service
metadata:
   name: postgres
   namespace: comtily
spec:
   type: NodePort
   selector:
      app: postgres
   ports:
      - port: 5432
        protocol: TCP
        targetPort: 5432
        nodePort: 32001
status:
  loadBalancer: {}
